--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
     <head>
         <title>WiCS Hacks 2023 Website</title>
+        <link rel="stylesheet" href="style.css">
+        <script src="main.js"></script>
     </head>
     <body>
-        <Button>Button</Button>
+        <button type="button" onclick="one()">Add Assignment</button>
     </body>
 </html>
