--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
         <script src="main.js"></script>
     </head>
     <body>
+        <select name="assignment">
+            <option value="Select" selected>Select Assignment Type</option>
+            <option value="Monday">Monday</option>
+            <option value="Tuesday">Tuesday</option>
+            <option value="Wednesday">Wednesday</option>
+            <option value="Thursday">Thursday</option>
+            <option value="Friday">Friday</option>
+            <option value="Saturday">Saturday</option>
+        </select>
         <button type="button" onclick="one()">Add Assignment</button>
+        <input type="text" id="Name" name="Name">
+        <div></div>
+        <Heading1>Todo List</Heading1>
+        <p>Text goes here.</p>
+        
+        <input type="date" id="start" name="trip-start" value="2018-07-22" min="2023-01-01" max="2024-12-31">
     </body>
 </html>
