--- a/index.html
+++ b/index.html
@@ -6,19 +6,6 @@
         <script src="main.js"></script>
     </head>
     <body>
-<<<<<<< HEAD
-        <select name="assignment">
-            <option value="Select" selected>Select Assignment Type</option>
-            <option value="Monday">Monday</option>
-            <option value="Tuesday">Tuesday</option>
-            <option value="Wednesday">Wednesday</option>
-            <option value="Thursday">Thursday</option>
-            <option value="Friday">Friday</option>
-            <option value="Saturday">Saturday</option>
-        </select>
-=======
-<<<<<<< Updated upstream
-=======
         <select id="assignment">
             <option value="Select" selected>Select Assignment Type</option>
             <option value="Task">Task</option>
@@ -26,14 +13,10 @@
             <option value="Essay">Essay</option>
             <option value="Problems">Problems</option>
         </select>
->>>>>>> Stashed changes
->>>>>>> main
+
         <button type="button" onclick="one()">Add Assignment</button>
-        <input type="text" id="Name" name="Name">
-        <div></div>
-        <Heading1>Todo List</Heading1>
+        <br>
+        <h1>Todo List</h1>
         <p>Text goes here.</p>
-        
-        <input type="date" id="start" name="trip-start" value="2018-07-22" min="2023-01-01" max="2024-12-31">
     </body>
 </html>
