--- a/task.html
+++ b/task.html
@@ -6,6 +6,15 @@
         <script src="main.js"></script>
     </head>
     <body>
+        <h2>Title</h2>
+        <input type="text" id="Title">
+        <h2>Due Date</h2>
+        <input type="date" id="start" name="trip-start" value="2023-02-05" min="2023-01-01" max="2024-12-31">
+        <br>
+        <br>
+        <button type="button" onclick="submit()">Submit</button>
+        <br>
+        <br>
         <button type="button" onclick="back()">Go Back</button>
     </body>
 </html>
