--- a/task.html
+++ b/task.html
@@ -6,9 +6,14 @@
         <script src="main.js"></script>
     </head>
     <body>
+        <h2>Title</h2>
         <input type="text" id="Title">
         <h2>Due Date</h2>
         <input type="date" id="start" name="trip-start" value="2023-02-05" min="2023-01-01" max="2024-12-31">
+        <h2>Study Time (in minutes)</h2>
+        <input type="text" id="Study Time">
+        <h2>Quiz Length (in minutes)</h2>
+        <input type="text" id="Quiz Length">
         <br>
         <br>
         <button type="button" onclick="submit()">Submit</button>
