--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <button type="button" onclick="one()">Add Assignment</button>
         <br>
-        <h1>Todo List</h1>
+        <h1>Assignment Todo List</h1>
         <p>Text goes here.</p>
     </body>
 </html>
