--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">
         <script src="main.js" ></script>
     </head>
-    <body onload="load()">
+    <body>
         <select id="assignment">
             <option value="Select" selected>Select Assignment Type</option>
             <option value="Task">Task</option>
