--- a/quiz.html
+++ b/quiz.html
@@ -6,13 +6,15 @@
         <script src="main.js"></script>
     </head>
     <body>
-        <h2>Title</h2>
+        <label for="Title">Title:</label>
         <input type="text" id="Title">
-        <h2>Due Date</h2>
-        <input type="date" id="start" name="trip-start" value="2023-02-05" min="2023-01-01" max="2024-12-31">
-        <h2>Study Time</h2>
+        <label for="dueDate">Due Date:</label>
+        <input type="datetime-local" id="dueDate" name="dueDate">
+        <br>
+        <br>
+        <label for="Study Time">Study Time:</label>
         <input type="text" id="Study Time">
-        <h2>Length of Quiz</h2>
+        <label for="Length of Quiz">Length of Quiz:</label>
         <input type="text" id="Length of Quiz">
         <br>
         <br>
