--- a/problems.html
+++ b/problems.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>WiCS Hacks 2023 Website</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="main.js"></script>
-</head>
-<body>
-<label for="Questions">Number of Questions:</label>
-<input type="number" id="Questions" name="Questions">
-<br>
-<br>
-<button type="button" onclick="submitp()">Submit</button>
-<br>
-<br>
+    <head>
+        <title>WiCS Hacks 2023 Website</title>
+        <link rel="stylesheet" href="style.css">
+        <script src="main.js"></script>
+    </head>
+    <body>
+        <label for="Questions">Number of Questions:</label>
+        <input type="number" id="Questions" name="Questions">
+        <br>
+        <br>
+        <label for="dueDate">Due Date:</label>
+        <input type="datetime-local" id="dueDate" name="dueDate">
+        <br>
+        <br>
+        <button type="button" onclick="submitp()">Submit</button>
+        <br>
+        <br>
 
-<div id="objectId"></div>
-</body>
-</html>
-<button type="button" onclick="reset()">Reset</button>
-<button type="button" onclick="back()">Go Back</button>
-</body>
+        <div id="objectId"></div>
+        </body>
+        </html>
+        <button type="button" onclick="reset()">Reset</button>
+        <button type="button" onclick="back()">Go Back</button>
+    </body>
 </html>
