done with essay page; hard-coded example

--- a/problems.html
+++ b/problems.html
@@ -10,13 +10,15 @@
 <input type="number" id="Questions" name="Questions">
 <br>
 <br>
-<button type="button" onclick="submitp()">Submit</button>
+<button type="button" onclick="save()">Save</button>
 <br>
 <br>
 
 <div id="objectId"></div>
 </body>
 </html>
+<button type="button" onclick="submitp()">I'm done with a question!</button>
+
 <button type="button" onclick="reset()">Reset</button>
 <button type="button" onclick="back()">Go Back</button>
 </body>
